# OS

./: bochsout.txt  bochsrc.txt  update_image.sh
src/: CMakeLists.txt  Input_Output.c  Input_Output.h  Makefile  boot.s  boot_info.h  descriptor_tables.c  descriptor_tables.h  errno-base.h  isr.c  isr.h  kernel  main.c  memory.c  memory.h  monitor.h  paging.c  paging.h  pic.c  pic.h  pit.c  pit.h  stdarg.c  stddef.c  stddef.h  stdint.c  string.h
src/boot/: Makefile  boot_info.c  boot_info.h  boot_info.h.gch
src/cpu/: Makefile  descriptor_tables.c  descriptor_tables.h  errno-base.h  isr.c  isr.h
src/libs/: CMakeLists.txt  Makefile  ctype.c  ctype.h  stdarg.h  stdbool.c  stdbool.h  stdint.h  stdint.h.gch  string.c  string.h
src/main/: Makefile  main.c
src/memory/: Makefile  memory.c  memory.h  paging.c  paging.h
src/monitor/: Makefile  monitor.c  monitor.h
src/pic/: Makefile  pic.c  pic.h
src/pit/: Makefile  pit.c  pit.h
